# hcs-u7-website

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  WEBSITE_DEPLOYMENT.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/cognitive-tests/: page.tsx
app/docs/: layout.tsx  page.tsx
app/examples/: page.tsx
app/generate/: page.tsx
app/how-it-works/: page.tsx
app/integrations/: page.tsx
app/legal/: page.tsx
app/pricing/: page.tsx
app/quick-auth/: page.tsx
app/research/: page.tsx
app/secure-login-demo/: page.tsx
components/: CodeBlock.tsx  CognitiveTestsSuite.tsx  Footer.tsx  HCSCodeDisplay.tsx  LanguageProvider.tsx  Navigation.tsx  ProfileChart.tsx  QuestionCard.tsx  ThemeProvider.tsx  ThemeToggle.tsx
data/: examples.json  questions.json
lib/: adaptive-testing.ts  client-id.ts  color-contrast-fix.ts  hardware-fingerprinting.ts  hcs-generator.ts  hcs-parser.ts  hcs-rotating-code.ts  hcs-verify.ts  profile-storage.ts  prompt-generator.ts  quick-auth.ts  redis-client.ts  rotating-nonce-store.ts  server-profile-store.ts  vocal-metrics.ts
scripts/: add-copyright-headers.sh  fix-all-colored-text.js  fix-all-contrast.js  fix-colored-backgrounds.js  fix-remaining-contrast.js  verify-contrast.js
sdk/hcs-u7-python/: LICENSE  README.md  pyproject.toml
sdk/hcs-u7-python/src/hcs_u7/: __init__.py  parser.py  types.py
sdk/hcs-u7-python/src/hcs_u7.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/hcs-u7-python/tests/: test_parser.py
(+79 files in other folders)
