[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcs-u7"
version = "0.1.0"
description = "HCS-U7 cognitive profile parser and utilities"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "CoreHuman" }
]
keywords = ["hcs-u7", "cognitive", "profile", "security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/corehuman/hcs-u7-python"
